# socra_teach

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/commands/: handover.md
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py  documents.py  health.py  progress.py
backend/app/core/: config.py  llm.py
backend/app/services/fsrs/: __init__.py  bkt.py  card_generator.py  scheduler.py  store.py
backend/app/services/rag/: embedder.py  ingestion.py  reranker.py  retriever.py  store.py
backend/app/services/tutor/: classifier.py  router.py  socratic.py
backend/tests/integration/: test_health.py  test_progress.py
backend/tests/unit/: test_bkt.py  test_classifier.py  test_embedder.py  test_fsrs_scheduler.py  test_fsrs_store.py  test_ingestion.py  test_socratic.py
docs/: HANDOVER.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  ConceptGraph.tsx  PdfViewer.tsx  ProgressDashboard.tsx  ReviewSession.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts  useProgress.ts  useRectSelect.ts  useReviewQueue.ts
frontend/src/pages/: DocumentsPage.tsx  ProgressPage.tsx  TutorPage.tsx
